# drone-swarm-search-algorithms

./: .gitignore  Dockerfile  LICENSE  README.md  analise_resultados.ipynb  baseline_test.py  compare.ipynb  compare_new.ipynb  config.py  docker-compose.yml  file_utils.py  greedy_heuristic.py  greedy_search.py  greedy_test.py  locked-requirements.txt  performance_analysis.ipynb  pyproject.toml  reinforce_il_train.py  reinforce_test.py  reinforce_train.py  requirements.txt  run_script.py  test_policy.py  test_trained_cov.py  test_trained_search.py  train.py  train_descentralized_ppo_cnn.py  train_ppo_cnn.py  train_ppo_cnn_cov.py  train_ppo_multi.py
algorithms/: __init__.py  greedy_search.py  icm.py  parallel_sweep.py  reinforce.py  reinforce_gpu.py  reinforce_il.py  training_utils.py
checkpoints/: nn_20_4_1_0_dqn.pt  nn_20_4_1_1_dqn.pt  nn_20_4_1_2_dqn.pt  nn_20_4_1_3_dqn.pt  nn_20_4_1_drone0.pt  nn_20_4_1_drone1.pt  nn_20_4_1_drone2.pt  nn_20_4_1_drone3.pt  nn_20_4_5.pt  nn_20_4_5_drone0.pt  nn_20_4_5_drone0_reinforce_il.pt  nn_20_4_5_drone1.pt  nn_20_4_5_drone1_reinforce_il.pt  nn_20_4_5_drone2.pt  nn_20_4_5_drone2_reinforce_il.pt  nn_20_4_5_drone3.pt  nn_20_4_5_drone3_reinforce_il.pt  nn_40_1_1.pt
data/: min_matrix.npy  nn_5_5_1.pt  results_20_20_1.csv  results_20_20_2.csv  results_20_4_1_greedy.csv  results_20_4_1_new.csv  results_20_4_1_reinforce.csv  results_20_4_1_reinforce_il.csv  results_20_4_5_greedy.csv  results_20_4_5_new.csv  results_20_4_5_reinforce.csv  results_20_4_5_reinforce_il.csv  results_greedy_20_a4_dc5.csv  statistics_20_20_1.csv  statistics_20_20_2.csv  statistics_20_4_1_reinforce.csv  statistics_20_4_1_reinforce_il.csv  statistics_20_4_5_new.csv  statistics_20_4_5_reinforce.csv  statistics_20_4_5_reinforce_il.csv  statistics_40_1_1.csv  statistics_40_4_1.csv  statistics_40_4_5.csv  statistics_5_5_1.csv
models/: nn_20_1_1_new.pt  nn_20_1_5_new.pt  nn_20_20_1.pt  nn_20_20_2.pt  nn_20_20_4.pt  nn_20_4_1_drone0_reinforce_il.pt  nn_20_4_1_drone1_reinforce_il.pt  nn_20_4_1_drone2_reinforce_il.pt  nn_20_4_1_drone3_reinforce_il.pt  nn_20_4_1_new.pt  nn_20_4_1_reinforce.pt  nn_20_4_5_drone0.pt  nn_20_4_5_drone0_reinforce_il.pt  nn_20_4_5_drone1.pt  nn_20_4_5_drone1_reinforce_il.pt  nn_20_4_5_drone2.pt  nn_20_4_5_drone2_reinforce_il.pt  nn_20_4_5_drone3.pt  nn_20_4_5_drone3_reinforce_il.pt  nn_20_4_5_new.pt  nn_20_4_5_reinforce.pt  nn_40_1_1.pt  nn_40_1_5.pt  nn_40_4_1.pt  nn_40_4_5.pt
results/: a_star_1.csv  a_star_2.csv  a_star_4.csv  expanding_search_1_agent.csv  expanding_search_2_agent.csv  expanding_search_4_agent.csv  traditional_search_1_agent.csv  traditional_search_2_agent.csv  traditional_search_4_agent.csv
rllib_experiments/: test_trained.py  test_trained_cnn_lstm.py  teste.py  train_dqn_multi.py  (+4 more)
(+55 files in other folders)
